Task GET API with joi validation and swagger doc
